fix: complete refactoring
