# miranum-engine/engine-backend/src/main/java/io/miranum/platform/engine/adapter/in/web/process/ProcessInstanceController.java
@@ -5,14 +5,14 @@ import io.miranum.platform.engine.application.port.in.process.MiranumProcessInst
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
+import org.springframework.data.domain.Page;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
+import javax.annotation.Nullable;
+import javax.validation.constraints.Max;
+import javax.validation.constraints.Min;
 
 /**
  * Rest API to interact with process instances.
@@ -36,9 +36,14 @@ public class ProcessInstanceController {
      * @return assigned process instances
      */
     @GetMapping()
-    public ResponseEntity<List<ProcessInstanceDto>> getAssignedInstances() {
-        val startedInstances = this.instanceQuery.getProcessInstanceByUser(this.authenticationProvider.getCurrentUserId());
-        return ResponseEntity.ok(this.serviceInstanceApiMapper.map2TO(startedInstances));
+    public Page<ProcessInstanceDto> getAssignedInstances(
+            @RequestParam(value = "page", defaultValue = "0", required = false) @Min(0) final int page,
+            @RequestParam(value = "size", defaultValue = "50", required = false) @Min(1) @Max(50) final int size,
+            @RequestParam(value = "query", required = false) @Nullable final String query
+    ) {
+        val userId = this.authenticationProvider.getCurrentUserId();
+        val startedInstances = this.instanceQuery.getProcessInstanceByUser(userId, page, size, query);
+        return startedInstances.map(this.serviceInstanceApiMapper::map2TO);
     }
 
     /**
